fix z-index for menu and our-story

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -7,6 +7,7 @@ nav.navbar {
   -webkit-backdrop-filter: saturate(180%) blur(20px);
   backdrop-filter: saturate(180%) blur(20px);
   border-bottom: 1px solid rgba(0,0,0,0.1);
+  z-index: 2002;
 
   .navbar-nav {
     .nav-link {
@@ -62,7 +63,7 @@ nav.navbar {
   transition: all $transition-duration;
   overflow: scroll;
   &.is-active {
-    z-index: 100;
+    z-index: 2001;
     opacity: 1;
     .nav-full__wrapper {
       z-index: 100;
